[package]
name = "raymarcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk4 = "0.4.7"
image = "0.24.4"
#libadwaita = "0.1.1"
nalgebra = { version = "0.31.1", features = ["serde-serialize", "rand"] }
nu-json = "0.68.1"
rayon = "1.5.3"
serde = { version = "1.0.145", features = ["derive"] }
